# Arex-Voice-Assistant

./: .gitattributes  .gitignore  README.md
docs/: COGNEE_MEMORY.md  CONGEE_MEMORY.md  ESP32_ONLY_TEST.md  ONLINE_RESEARCH.md  STEP_BY_STEP_GUIDE.md  YOUR_MECANUM_CODE_INTEGRATION.md  architecture.md  protocol.md  protocols.md  risk-and-testing.md  roadmap.md  setup.md  wiring.md
firmware/ai_audio_esp32/: platformio.ini
firmware/ai_audio_esp32/include/: AppConfig.h  secrets.example.h
firmware/ai_audio_esp32/src/: AudioAssistantApp.cpp  AudioAssistantApp.h  AudioIO.cpp  AudioIO.h  EmotionDisplay.cpp  EmotionDisplay.h  main.cpp
firmware/arex_voice_assistant/: platformio.ini
firmware/arex_voice_assistant/include/: AppConfig.h  secrets.example.h
firmware/rover_esp32/: platformio.ini
firmware/rover_esp32_bench_test/: platformio.ini
firmware/smart_home_esp32/: platformio.ini
firmware/uno_integration/: library.properties  platformio.ini
firmware/uno_mecanum_aura/: platformio.ini
pc_server/: .env.example  pyproject.toml
pc_server/src/arex_server/: __init__.py  ai.py  app.py  audio.py  cognee.py  config.py  main.py
pc_server/src/aura_server/: __init__.py  ai.py  app.py  audio.py  cognee.py  config.py  congee.py  conversation.py  intent.py  main.py  models.py
pc_server/tests/: test_ai_search_config.py  test_app.py  test_audio.py  test_cognee.py  test_congee.py  test_intent.py  test_models.py  test_utf8_compliance.py  test_wake_word.py
protocol/schemas/: ai-decision.schema.json  audio-start.schema.json  home-command.schema.json
(+31 files in other folders)
